--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
-  <h1>My First Web site </h1>
+  <h1>My First Web site (Updates)</h1>
+  <h2>Some more Code </h2>
 </head>
 <body>
   
