--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <head>
   <h1>My First Web site (Updates)</h1>
   <h2>Some more Code </h2>
+  <ol>
+    <th>
+      <li>Name</li>
+      <li>Age</li>
+      <li>ID</li>
+      <li>University</li>
+    </th>
+  </ol>
 </head>
 <body>
   
