--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <h1>My First Web site (Updates)</h1>
   <h2>Some more Code </h2>
   <ol>
-    <th>
-      <li>Name</li>
-      <li>Age</li>
-      <li>ID</li>
-      <li>University</li>
-    </th>
+    <th>Name</th>
+    <th>Id</th> 
+    <th>University</th>
+    
     <td>
       <li>Deepak</li>
       <li>234754</li>
