--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <th>Id</th> 
     <th>University</th>
     
-    <td>
+    <td type="a">
       <li>Deepak</li>
       <li>234754</li>
       <li>University</li>
